--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -34,7 +34,7 @@
 
 
 			<td ><h4>Status</h4></td>
-			<td  class="alignc"><h4>Reply Number</h4></td>
+			<td  class="alignc"><h4>Replies</h4></td>
 			<td ><h4>Manipulation</h4></td>
 			</tr>
 
@@ -57,9 +57,9 @@
 			<td>{{ques_list_releases[i].start_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>{{ques_list_releases[i].end_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>
-				{{ques_list_created[i].status}}
+				{{ques_list_created[i].get_status()}}
 			</td>
-			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].reply_sum}}</td>
+			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].quesanswers.count()}}</td>
 			<td>
 
 
@@ -115,7 +115,7 @@
 			</td>
 			<td class="col-md-4">{{ans.date.strftime("%Y-%m-%d %H:%M")}}</td>
 			<td>
-			{{ans.questionnaire.status}}
+			{{ans.questionnaire.get_status()}}
 			</td>
 			<td class="col-md-4 center">
 
