--- a/app/templates/questionnaire_modify.html
+++ b/app/templates/questionnaire_modify.html
@@ -18,7 +18,7 @@
 		<div class="form-group">
 			<label for="description" class="control-label col-md-2">Description</label>
 			<div class="col-md-5">
-				<textarea rows="8" class="form-control" id="description" name="description" value="{{description}}"></textarea>
+				<textarea rows="8" class="form-control" id="description" name="description">{{description}}</textarea>
 			</div>
 		</div>
 		<div class="form-group row">
