--- a/app/templates/questionnaire_preview.html
+++ b/app/templates/questionnaire_preview.html
@@ -1,58 +1,52 @@
-<!-- <html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>new_questionnaire</title> -->
-<!-- <head>
-	<script type="text/javascript" src="/static/js/new_questionnaire.js"></script>
-	<script type="text/javascript" src="/static/js/jquery.js"></script>
-</head> -->
 {% extends "base.html" %}
 
 {% block content %}
-<body>
+	<h1>{{title}}</h1>
+	<h3>{{subject}}</h3>
+	<h5>{{description}}</h5>
+	<hr>
 	<form method="POST">
 	<div id="ques_list">
 	{% for i in range(0,schema|length) %}
 		<div>
-			<label>{{i+1}}.</label><label>{{schema[i].des}}</label>
-			{% if schema[i].type==0 %}
+			<label>{{i+1}}.</label><label>{{schema[i].description}}</label>
+			{% if schema[i].type=='0' %}
 			<ul>
-			{% for j in range(0,schema[i].opt|length) %}
+			{% for j in range(0,schema[i].options|length) %}
 				<li>
-					<input type="radio" value="{{j}}"/>
-					<label>{{schema[i].opt[j]}}</label>
+					<input type="radio" value="{{j}}" disabled="disabled"/>
+					<label>{{schema[i].options[j]}}</label>
 				</li>
 			{% endfor %}
 			</ul>
-			{% elif schema[i].type==1 %}
+			{% elif schema[i].type=='1' %}
 			<ul>
-			{% for j in range(0,schema[i].opt|length) %}
+			{% for j in range(0,schema[i].options|length) %}
 				<li>
-					<input type="checkbox" value="1"/>
-					<label>{{schema[i].opt[j]}}</label>
+					<input type="checkbox" value="1" disabled="disabled"/>
+					<label>{{schema[i].options[j]}}</label>
 				</li>
 			{% endfor %}
 			</ul>
-			{% elif schema[i].type==2 %}
+			{% elif schema[i].type=='2' %}
 			<ul>
 				<li>
-					<input type="radio" value="1"/>
+					<input type="radio" value="1" disabled="disabled"/>
 					<label>true</label>
 				</li>
 				<li>
-					<input type="radio" value="0"/>
+					<input type="radio" value="0" disabled="disabled"/>
 					<label>false</label>
 				</li>
 			</ul>
-			{% elif schema[i].type==3 %}
-			<br/><input type="text"/>
+			{% elif schema[i].type=='3' %}
+			<br/><input type="text" disabled="disabled"/>
 			{% endif %}
 		</div>
 	{% endfor %}
 	</div>
-	<input class="btn btn-primary btn" type="button" value="submit"/>
-	
-	<input class="btn btn-default" type="button" value="modify"/>
 	</form>
+	<a class="btn btn-default" href="{{url_for('modify',q_id=id)}}">Modify</a>
 
 		{% endblock %}
 <!-- </body>
