--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
 <a id="scrollUp" href="#top" title="" style="position: fixed; z-index: 2147483647"></a>
 <!-- footer -->
 <footer>
-    <p>&copy; 2014 Plask</p>
+    <p class="text-center">&copy; 2014 Plask</p>
 </footer>
 </body>
 </html>
