--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,3 +1,12 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 60px;
+}
+
 .maindiv {
     margin-top: 40px;
     padding-top: 40px;
@@ -18,6 +27,7 @@ a:hover {
 }
 
 footer {
-    text-align: center;
-    padding: 30px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
