--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,26 +1,29 @@
-<<<<<<< HEAD
 {% extends "base.html" %}
 
 {% block content %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/js/new_questionnaire.js') }}"></script>
 
 
-
+    
 	<form method="POST">
 
-
+    {% if g.user == user %}
+        <h3>Welcome, {{user.username}}</h3>
+    {% else %}
+        <h3>{{user.username}}({{user.mail}})</h3>
+    {% endif %}
     
 
     <div ><h1>Questionnaire Created:
-    	{%if not g.user.isAdmin %}
-    	<a class="btn btn-primary btn-lg pull-right" role="button" href="{{url_for('create')}}">Create Questionnaire</a>
+    	{%if g.user == user %}
+    	    <a class="btn btn-primary btn-lg pull-right" role="button" href="{{url_for('create')}}">Create Questionnaire</a>
     	{% endif %}</h1></div>
 
 
-	
+
 	<div id="ques_list_created">
-		<table id="proj_list" class="table">
-			<tbody val="ttt">
+		<table id="proj_list" class="table table-striped">
+			<thead>
 			<tr class="thead_td" class="row fluid">
 
 			<td  class="sequence" id="proj_title"><h4>Title</h4></td>
@@ -31,14 +34,14 @@
 
 
 			<td ><h4>Status</h4></td>
-			<td  class="alignc"><h4>Reply Number</h4></td>
+			<td  class="alignc"><h4>Replies</h4></td>
 			<td ><h4>Manipulation</h4></td>
 			</tr>
+			</thead>
 
 
 
-
-
+			<tbody val="ttt">
 			{% for i in range(0,ques_list_created|length) %}
 
 			<tr id="{{ques_list_created[i].id}}">
@@ -54,9 +57,9 @@
 			<td>{{ques_list_releases[i].start_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>{{ques_list_releases[i].end_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>
-				{{ques_list_created[i].status}}
+				{{ques_list_created[i].get_status()}}
 			</td>
-			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].reply_sum}}</td>
+			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].quesanswers.count()}}</td>
 			<td>
 
 
@@ -83,23 +86,24 @@
 			</tbody>
 		</table>
 	</div>
-	
+
 	<br/>
 	    <h1>Questionnaire Answered:</h1>
 	<div id="ques_list_filled">
-		<table id="proj_list" class="table">
-			<tbody val="ttt">
+		<table id="proj_list" class="table table-striped">
+			<thead>
 			<tr class="row fluid">
 
 			<td  class="col-md-4" id="proj_title"><h4>Title</h4></td>
 
-			<td  class="col-md-4" id="proj_updated"><h4>Fill Time</h4></td>
+			<td  class="col-md-4" id="proj_updated"><h4>Last Answer</h4></td>
 
 
 			<td  class="col-md-4"><h4>Status</h4></td>
 			<td  class="col-md-4"><h4>Manipulation</h4></td>
 			</tr>
-
+			</thead>
+			<tbody val="ttt">
 			{% for ans in ques_ans_list%}
 			<tr id="{{ans.questionnaire.id}}" class="row fluid">
 
@@ -112,7 +116,7 @@
 			</td>
 			<td class="col-md-4">{{ans.date.strftime("%Y-%m-%d %H:%M")}}</td>
 			<td>
-			{{ans.questionnaire.status}}
+			{{ans.questionnaire.get_status()}}
 			</td>
 			<td class="col-md-4 center">
 
@@ -128,139 +132,3 @@
 	</div>
 	</form>
 {% endblock %}
-
-
-=======
-{% extends "base.html" %}
-
-{% block content %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/js/new_questionnaire.js') }}"></script>
-
-
-
-	<form method="POST">
-
-
-    
-
-    <div ><h1>Questionnaire Created:
-    	{%if not g.user.isAdmin %}
-    	<a class="btn btn-primary btn-lg pull-right" role="button" href="{{url_for('create')}}">Create Questionnaire</a>
-    	{% endif %}</h1></div>
-
-
-	
-	<div id="ques_list_created">
-		<table id="proj_list" class="table">
-			<tbody val="ttt">
-			<tr class="thead_td" class="row fluid">
-
-			<td  class="sequence" id="proj_title"><h4>Title</h4></td>
-			<td  class="sequence" id="proj_created"><h4>Create Time</h4></td>
-
-			<td  class="sequenceup" id="proj_start"><h4>Start Time</h4></td>
-			<td  class="sequenceup" id="proj_end"><h4>End Time</h4></td>
-
-
-			<td ><h4>Status</h4></td>
-			<td  class="alignc"><h4>Reply Number</h4></td>
-			<td ><h4>Manipulation</h4></td>
-			</tr>
-
-
-
-
-
-			{% for i in range(0,ques_list_created|length) %}
-
-			<tr id="{{ques_list_created[i].id}}">
-
-			<td>
-			<span id="title" class="title">
-
-			<a href="{{url_for('questionnaire', questionnaire_id=ques_list_created[i].id)}}">{{ques_list_created[i].title}}</a>
-
-			</span>
-			</td>
-			<td>{{ques_list_created[i].create_time.strftime("%Y-%m-%d %H:%M")}}</td>
-			<td>{{ques_list_releases[i].start_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
-			<td>{{ques_list_releases[i].end_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
-			<td>
-				{{ques_list_created[i].status}}
-			</td>
-			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].reply_sum}}</td>
-			<td>
-
-
-
-			<a href="#" class="previewb" target="_blank" title="preview"><span class="glyphicon glyphicon-search"></span></a>
-			<a href="#" class="analysis" title="analysis"><span class="glyphicon glyphicon-stats"></span></a>
-
-			<a href="#"  class="editor" title="modify" ><span class="glyphicon glyphicon-edit"></span></a>
-
-			<a href="#" class="deletebtn ml2" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
-
-
-
-
-
-			</td>
-
-
-
-
-
-			</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-	</div>
-	
-	<br/>
-	    <h1>Questionnaire Answered:</h1>
-	<div id="ques_list_filled">
-		<table id="proj_list" class="table">
-			<tbody val="ttt">
-			<tr class="row fluid">
-
-			<td  class="col-md-4" id="proj_title"><h4>Title</h4></td>
-
-			<td  class="col-md-4" id="proj_updated"><h4>Fill Time</h4></td>
-
-
-			<td  class="col-md-4"><h4>Status</h4></td>
-			<td  class="col-md-4"><h4>Manipulation</h4></td>
-			</tr>
-
-			{% for ans in ques_ans_list%}
-			<tr id="{{ans.questionnaire.id}}" class="row fluid">
-
-			<td class="col-md-4">
-			<span id="title" class="title">
-
-			<a href="{{url_for('questionnaire', questionnaire_id=ans.questionnaire.id)}}">{{ans.questionnaire.title}}</a>
-
-			</span>
-			</td>
-			<td class="col-md-4">{{ans.date.strftime("%Y-%m-%d %H:%M")}}</td>
-			<td>
-			{{ans.questionnaire.status}}
-			</td>
-			<td class="col-md-4 center">
-
-			<a href="" class="editor center"  title="preview"><span class="glyphicon glyphicon-search"></span></a>
-
-			<a href="#" class="analysis center" title="analysis"><span class="glyphicon glyphicon-stats"></span></a>
-			</td>
-
-			</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-	</div>
-	</form>
-{% endblock %}
-
-
->>>>>>> c97d6c4f215a5df76eda493c8e2e69d827aface2
-
