--- a/app/templates/questionnaire_create_question.html
+++ b/app/templates/questionnaire_create_question.html
@@ -3,11 +3,13 @@
 {% block content_step %}
   <h1 class="page-header">Step 2/2 : Add Questions</h1>
 
-  <form method="POST">
-    <div id="ques_list">
-    </div>
-    <button class="btn btn-default" type="submit">Submit</button>
-  </form>
+  <div class="col-sm-9 col-md-10">
+    <form method="POST">
+      <div id="ques_list">
+      </div>
+      <button class="btn btn-default" type="submit">Submit</button>
+    </form>
+  </div>
 
   <div class="col-sm-3 col-md-2 sidebar-right">
     <ul class="nav nav-stacked">
