update questionnaire_fill.html & questionnaire_preview.html

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -5,6 +5,7 @@ html {
 
 body {
     margin-bottom: 60px;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, simsun, sans-serif;
 }
 
 .maindiv {
