--- a/app/templates/questionnaire.html
+++ b/app/templates/questionnaire.html
@@ -1,94 +1,116 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+    <div class="row">
+        <div class="col-md-8">
+            <h1>{{ title }}</h1>
+        </div>
+        <div class="col-md-4" style="margin-top:28px">
+            <a class="btn btn-large btn-default" href="{{ questionnaire_id }}/preview">Preview</a>
+            <a class="btn btn-large btn-default" href="{{ questionnaire_id }}/modify">Modify</a>
+            {% if state == 'In creating' %}
+            <a class="btn btn-large btn-success" href="{{ questionnaire_id }}/release">Release</a>
+            {% endif %}
+            {% if state == 'Closed' %}
+            <a class="btn btn-large btn-success" href="{{ questionnaire_id }}/release">Reopen</a>
+            {% endif %}
+            {% if state == 'In releasing' or state == 'In reopening' %}
+            <a class="btn btn-large btn-danger" href="{{ questionnaire_id }}/close">Close</a>
+            {% endif %}
+        </div>
+    </div>
 
-<h1>Questionnaire Information</h1>
+    <br/>
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1 panel panel-default">
+        <div class="panel-body">
+        <div class="row">
+            <div class="col-md-10">
+                <dl class="dl-horizontal col-md-6">
+                    <dt>State</dt>
+                    <dd>{{ state }}</dd>
+                </dl>
+                <dl class="dl-horizontal col-md-6">
+                    <dt>Subject</dt>
+                    <dd>{{ subject }}</dd>
+                </dl>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
 
-<br/>
+        <div class="row">
+            <div class="col-md-10">
+            <dl class="dl-horizontal col-md-12">
+                <dt>Description</dt>
+                <dd>{{ description }}</dd>
+            </dl>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+        </div>
+        </div>
+    </div>
 
-<div class="row-fluid">
-    <dl class="dl-horizontal col-md-6">
-        <dt>Title</dt>
-        <dd>{{ title }}</dd>
-    </dl>
+    {% if state == 'In releasing' or state == 'In reopening' %}
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Current Release</h2>
+        </div>
+    </div>
 
-    <dl class="dl-horizontal col-md-6">
-        <dt>State</dt>
-        <dd>{{ state }}</dd>
-    </dl>
-</div>
+    <br/>
 
-<div class="row-fluid">
-    <dl class="dl-horizontal col-md-6">
-        <dt>Subject</dt>
-        <dd>{{ subject }}</dd>
-    </dl>
+    
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1 panel panel-default">
+        <div class="panel-body">
+        <div class="col-md-8">
+        <dl class="dl-horizontal">
+            <dt>Start time</dt>
+            <dd>{{ start_time }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>End time</dt>
+            <dd>{{ end_time }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Allow anonymous</dt>
+            <dd>{{ is_allow_anonymous }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Limit number of deliveries for each participant</dt>
+            <dd>{{ limit_num_participants }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Limit number of deliveries for IP address</dt>
+            <dd>{{ limit_num_ip }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Special participants</dt>
+            <dd>{{ special_participants }}</dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>URL: </dt>
+            <dd><a id="Url_Change" href="http://192.168.43.164:5000/questionnaire/{{q_id}}/fill">http://192.168.43.164:5000/questionnaire/{{q_id}}/fill</a></dd>
+        </dl>
+        </div>
+        </div>
+        </div>
+    </div>
+    {% endif %}
 
-    <dl class="dl-horizontal col-md-6">
-        <dt>Description</dt>
-        <dd>{{ description }}</dd>
-    </dl>
-</div>
-
-<hr/>
-<br/>
-
-<h1>Release Information</h1>
-
-<br/>
-
-{% if state == 'In creating' %}
-<p>No release yet.</p>
-{% endif %}
-
-{% if state == 'Closed' %}
-<p>The questionnaire is closed.</p>
-{% endif %}
-
-{% if state == 'In releasing' or state == 'In reopening' %}
-<dl class="dl-horizontal">
-    <dt>Start time</dt>
-    <dd>{{ start_time }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>End time</dt>
-    <dd>{{ end_time }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>Allow anonymous</dt>
-    <dd>{{ is_allow_anonymous }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>Limit number of deliveries for each participant</dt>
-    <dd>{{ limit_num_participants }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>Limit number of deliveries for IP address</dt>
-    <dd>{{ limit_num_ip }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>Special participants</dt>
-    <dd>{{ special_participants }}</dd>
-</dl>
-<dl class="dl-horizontal">
-    <dt>URL: </dt>
-    <dd><a id="Url_Change" href="http://192.168.43.164:5000/questionnaire/{{q_id}}/fill">http://192.168.43.164:5000/questionnaire/{{q_id}}/fill</a></dd>
-</dl>
-{% endif %}
-
-<a class="btn btn-large btn-default" href="{{ questionnaire_id }}/preview">Preview</a>
-<a class="btn btn-large btn-default" href="{{ questionnaire_id }}/modify">Modify</a>
-{% if state == 'In creating' %}
-<a class="btn btn-large btn-default" href="{{ questionnaire_id }}/release">Release</a>
-{% endif %}
-{% if state == 'Closed' %}
-<a class="btn btn-large btn-default" href="{{ questionnaire_id }}/release">Reopen</a>
-{% endif %}
-{% if state == 'In releasing' or state == 'In reopening' %}
-<a class="btn btn-large btn-default" href="{{ questionnaire_id }}/close">Close</a>
-{% endif %}
-
+<h2>Report</h2>
+<br />
 {% block report %}{% endblock %}
+
+</div>
+</div>
+</div>
 
 <script>
     window.onload=function(){
