fix release_views.py bug & add required to questionnaire pages

--- a/app/templates/questionnaire_create.html
+++ b/app/templates/questionnaire_create.html
@@ -6,19 +6,19 @@
 		<div class="form-group">
 			<label for="title" class="control-label col-md-2">Title</label>
 			<div class="col-md-5">
-				<input class="form-control" id="title" name="title" type="text"/>
+				<input class="form-control" id="title" name="title" type="text" required/>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="subject" class="control-label col-md-2">Subject</label>
 			<div class="col-md-5">
-				<input class="form-control" id="subject" name="subject" type="text"/>
+				<input class="form-control" id="subject" name="subject" type="text" required/>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="description" class="control-label col-md-2">Description</label>
 			<div class="col-md-5">
-				<textarea rows="8" class="form-control" id="description" name="description"></textarea>
+				<textarea rows="8" class="form-control" id="description" name="description" required></textarea>
 			</div>
 		</div>
 		<div class="form-group row">
