--- a/app/templates/questionnaire_create_question.html
+++ b/app/templates/questionnaire_create_question.html
@@ -7,7 +7,7 @@
     <form method="POST">
       <div id="ques_list">
       </div>
-      <button class="btn btn-default" type="submit">Submit</button>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
 
