--- a/app/templates/questionnaire_modify.html
+++ b/app/templates/questionnaire_modify.html
@@ -6,24 +6,24 @@
 		<div class="form-group">
 			<label for="title" class="control-label col-md-2">Title</label>
 			<div class="col-md-5">
-				<input class="form-control" id="title" name="title" type="text" value="{{title}}"/>
+				<input class="form-control" id="title" name="title" type="text" value="{{title}}" required/>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="subject" class="control-label col-md-2">Subject</label>
 			<div class="col-md-5">
-				<input class="form-control" id="subject" name="subject" type="text" value="{{subject}}"/>
+				<input class="form-control" id="subject" name="subject" type="text" value="{{subject}}" required/>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="description" class="control-label col-md-2">Description</label>
 			<div class="col-md-5">
-				<textarea rows="8" class="form-control" id="description" name="description">{{description}}</textarea>
+				<textarea rows="8" class="form-control" id="description" name="description" required>{{description}}</textarea>
 			</div>
 		</div>
 		<div class="form-group row">
 	        <div class="col-md-offset-2 col-md-5">
-	            <button class="btn btn-primary" type="submit">Create
+	            <button class="btn btn-primary" type="submit">Modify
 	            </button>
 	        </div>
     	</div>
