--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -38,7 +38,7 @@
 		</div>
 	{% endfor %}
 	</div>
-    <button class="btn btn-default" type="submit">Submit</button>
+    <button class="btn btn-primary" type="submit">Submit</button>
   </form>
 </div>
 
