--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -28,6 +28,13 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  background: url(/static/img/plask_back_pic.jpg);
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+ /* opacity:0.4;
+  filter:alpha(opacity=40); */
 }
 body {
   color: #fff;
