--- a/app/templates/questionnaire_preview.html
+++ b/app/templates/questionnaire_preview.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="well" style="background-color: white;padding: 60px">
+<div class="panel panel-default" style="padding: 60px">
 <h1>[{{subject}}] {{title}}</h1>
 <p id="description">{{description}}</p>
 <hr style="border:0;background-color:#357ebd;height:1px;">
